--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
       <nav>
          <ul>
-            <li><a href="/Studio">Студия</a></li>
-            <li><a href="/Portfolio">Портофио</a></li>
+            <li><a href="index.html">Студия</a></li>
+            <li><a href="portfolio.html">Портофио</a></li>
             <li><a href="/Contacts">Контакты</a></li>
          </ul>
 
