--- a/portfolio.html
+++ b/portfolio.html
@@ -4,25 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <!-- Верхняя линия -->
 <header>
+<div class="header">
     <a href="">WebStudio</a>
 
     <nav>
-        <ul>
-            <li><a href="index.html">Студия</a></li>
-            <li><a href="portfolio.html">Портофио</a></li>
-            <li><a href="/Contacts">Контакты</a></li>
+        <ul class="navigators">
+            <li><a href="index.html" class="navigator">Студия</a></li>
+            <li><a href="portfolio.html" class="navigator">Портофио</a></li>
+            <li><a href="/Contacts" class="navigator">Контакты</a></li>
         </ul>
 
     </nav>
-    <ul>
-        <li><a href="email:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <ul class="infos">
+        <li><a href="email:info@devstudio.com" class="info">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="info">+38 096 111 11 11</a></li>
     </ul>
+</div>>  
 </header>
 <main>
     <!-- Портфолио -->
