--- a/index.html
+++ b/index.html
@@ -49,42 +49,45 @@
 <section>
 <div>
    <h2 class="no-see">Особенности</h2>   
-      <ul>
-         <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+      <ul class="features">
+         <li class="feature-1">
+            <h3 class="feature-head">Внимание к деталям</h3>
+            <p class="feature-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
          </li>
-         <li>
-            <h3>Пунктуальность</h3>
-            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+         <li class="feature-2">
+            <h3 class="feature-head">Пунктуальность</h3>
+            <p class="feature-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
          </li>
-         <li>
-            <h3>Планирование</h3>
-            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+         <li class="feature-3">
+            <h3 class="feature-head">Планирование</h3>
+            <p class="feature-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
-         <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+         <li class="feature-4">
+            <h3 class="feature-head">Современные технологии</h3>
+            <p class="feature-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
          </li>
       </ul>
 </div>
 </section>
 <!-- Чем мы занимаемся-->
+
+
+<!-- РАЗОБРАТЬСЯ С РАСПОЛОЖЕИЕМ !!!!!!!-->
 <section>
 <div>
-   <h2>
+   <h2 class="work">
       Чем мы занимаемся
    </h2>
-   <ul>
-      <li><img src="img/comp_work.jpg" alt="Computer Work" width="370" height="294"></li>
-      <li><img src="img/phone_work.jpg" alt="Phone Work" width="370" height="294"></li>
-      <li><img src="img/tablet_work.jpg" alt="Tablet Work" width="370" height="294"></li>
+   <ul class="work-pics">
+      <li><img src="img/comp_work.jpg" alt="Computer Work" class="pic-1"></li>
+      <li><img src="img/phone_work.jpg" alt="Phone Work" class="pic-2"></li>
+      <li><img src="img/tablet_work.jpg" alt="Tablet Work" class="pic-3"></li>
    </ul>
 </div>
 </section>
 <!-- Наша команда -->
 <section>
-   <h2>Наша команда</h2>
+   <h2>Наша команда</h2> 
    <ul>
       <li>
          <img src="img/img_team/product_designer.jpg"
@@ -151,8 +154,8 @@
                </a>
 
             </li>
-            <li class="info"><a href="mailto:info@example.com">info@example.com</a></li>
-            <li class="info"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <li><a href="mailto:info@example.com" class="info">info@example.com</a></li>
+            <li><a href="tel:+380991111111" class="info">+38 099 111 11 11</a></li>
          </ul>
       </address>
    </footer>
