--- a/portfolio.html
+++ b/portfolio.html
@@ -12,26 +12,29 @@
         rel="stylesheet">
     <title>Document</title>
 </head>
+
+
 <body>
-    <!-- Верхняя линия -->
+<!-- Верхняя линия -->
 <header>
-<div class="header">
-    <a href="">WebStudio</a>
+    <div class="header">
+        <a href="">WebStudio</a>
 
-    <nav>
-        <ul class="navigators">
-            <li><a href="index.html" class="navigator">Студия</a></li>
-            <li><a href="portfolio.html" class="navigator">Портофио</a></li>
-            <li><a href="/Contacts" class="navigator">Контакты</a></li>
+        <nav>
+            <ul class="navigators">
+                <li><a href="index.html" class="navigator">Студия</a></li>
+                <li><a href="portfolio.html" class="navigator">Портофио</a></li>
+                <li><a href="/Contacts" class="navigator">Контакты</a></li>
+            </ul>
+
+        </nav>
+        <ul class="infos">
+            <li><a href="email:info@devstudio.com" class="info">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="info">+38 096 111 11 11</a></li>
         </ul>
-
-    </nav>
-    <ul class="infos">
-        <li><a href="email:info@devstudio.com" class="info">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="info">+38 096 111 11 11</a></li>
-    </ul>
-</div>>  
+    </div>
 </header>
+
 <main>
     <!-- Портфолио -->
     <section>
@@ -128,13 +131,15 @@
     <address>
         <ul>
             <li>
-                <a href="https://goo.gl/maps/bWFkGNw7Ft1GiUdh8" target="_blank" rel="noopener noreferrer">
+                <a href="https://goo.gl/maps/bWFkGNw7Ft1GiUdh8" 
+                target="_blank" 
+                rel="noopener noreferrer">
                     г. Киев, пр-т Леси Украинки, 26
                 </a>
 
             </li>
-            <li><a href="mailto:info@example.com">info@example.com</a></li>
-            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <li><a href="mailto:info@example.com" class="info">info@example.com</a></li>
+            <li><a href="tel:+380991111111" class="info">+38 099 111 11 11</a></li>
         </ul>
     </address>
 </footer>
