--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- Верхняя линия -->
    <header>
    <div class="header">
-      <a href="">WebStudio</a>
+      <a href="index.html" class="header-brand"><span class="head-blue">Web</span>Studio</a>
 
       <nav>
          <ul class="navigators">
@@ -46,7 +46,7 @@
 </div>
 </section>
 <!--Особенности-->
-<section>
+<section> 
 <div>
    <h2 class="no-see">Особенности</h2>   
       <ul class="features">
@@ -72,7 +72,7 @@
 <!-- Чем мы занимаемся-->
 
 
-<!-- РАЗОБРАТЬСЯ С РАСПОЛОЖЕИЕМ !!!!!!!-->
+<!-- РАЗОБРАТЬСЯ С !H2!-->
 <section>
 <div>
    <h2 class="work">
@@ -86,54 +86,54 @@
 </div>
 </section>
 <!-- Наша команда -->
-<section>
-   <h2>Наша команда</h2> 
-   <ul>
-      <li>
+<section id="ourteam">
+   <h2 class="team">Наша команда</h2> 
+   <ul class="team-box">
+      <li class="team-1">
          <img src="img/img_team/product_designer.jpg"
                alt="Product Designer"
                width="270"
                height="260">
-         <h3>
+         <h3 class="team-member">
             Игорь Демьяненко
          </h3>
-            <p>
+            <p class="member-desc">
                Product Designer
             </p>
       </li>
-      <li>
+      <li class="team-2">
          <img src="img/img_team/front_end_developer.jpg"
                alt="Front End developer"
                width="270"
                height="260">
-         <h3>
+         <h3 class="team-member">
             Ольга Репина
          </h3>
-            <p>
+            <p class="member-desc">
                Frontend Developer
             </p>
       </li>
-      <li>
+      <li class="team-3">
          <img src="img/img_team/marketing.jpg" 
                alt="Marketing Worker"
                width="270" 
                height="260">
-         <h3>
+         <h3 class="team-member">
             Николай Тарасов
          </h3>
-            <p>
+            <p class="member-desc">
                Marketing
             </p>
       </li>
-      <li>
+      <li class="team-4">
          <img src="img/img_team/ui_designer.jpg" 
                alt="UI Designer" 
                width="270" 
                height="260">
-         <h3>
+         <h3 class="team-member">
             Михаил Ермаков
          </h3>
-            <p>
+            <p class="member-desc">
                UI Designer
             </p>
       </li>
@@ -142,20 +142,21 @@
 </main>
 
 <!-- Подвал -->
-   <footer>
-      <a href="">WebStudio</a>
+   <footer class="footer">
+      <a href="index.html" class="foot-brand">Web<span class="foot-white">Studio</span></a>
       <address>
-         <ul>
+         <ul class="location">
             <li>
                <a href="https://goo.gl/maps/bWFkGNw7Ft1GiUdh8"
                target="_blank"
-               rel="noopener noreferrer" >
+               rel="noopener noreferrer" 
+               class="adress">
                г. Киев, пр-т Леси Украинки, 26
                </a>
 
             </li>
-            <li><a href="mailto:info@example.com" class="info">info@example.com</a></li>
-            <li><a href="tel:+380991111111" class="info">+38 099 111 11 11</a></li>
+            <li><a href="mailto:info@example.com" class="info-foot">info@example.com</a></li>
+            <li><a href="tel:+380991111111" class="info-foot">+38 099 111 11 11</a></li>
          </ul>
       </address>
    </footer>
