--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 <!-- Верхняя линия -->
 <header>
     <div class="header">
-        <a href="">WebStudio</a>
+        <a href="index.html" class="header-brand"><span class="head-blue">Web</span>Studio</a>
 
         <nav>
             <ul class="navigators">
@@ -127,13 +127,13 @@
 </main>
     <!-- Подвал -->
 <footer>
-    <a href="">WebStudio</a>
+    <a href="index.html" class="header-brand"><span class="head-blue">Web</span>Studio</a>
     <address>
         <ul>
             <li>
                 <a href="https://goo.gl/maps/bWFkGNw7Ft1GiUdh8" 
                 target="_blank" 
-                rel="noopener noreferrer">
+                rel="noopener noreferrer" class="adress">
                     г. Киев, пр-т Леси Украинки, 26
                 </a>
 
