--- a/index.html
+++ b/index.html
@@ -17,32 +17,32 @@
 
 <body>
 <!-- Верхняя линия -->
-   <header>
-   <div class="header">
-      <a href="index.html" class="header-brand"><span class="head-blue">Web</span>Studio</a>
+   <header class="head">
+   <div class="container-x1">
+      <a href="index.html" class="logo">Web<span class="logo-black">Studio</span></a>
 
       <nav>
          <ul class="navigators">
             <li><a href="index.html" class="navigator">Студия</a></li>
-            <li><a href="portfolio.html" class="navigator">Портофио</a></li>
-            <li><a href="/Contacts" class="navigator">Контакты</a></li>
+            <li><a href="portfolio.html" class="navigator">Портфолио</a></li>
+            <li><a href="" class="navigator">Контакты</a></li>
          </ul>
 
       </nav>
-      <ul class="infos">
-            <li><a href="email:info@devstudio.com" class="info">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="info">+38 096 111 11 11</a></li>
+      <ul class="head-infos">
+            <li><a href="email:info@devstudio.com" class="head-info">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="head-info">+38 096 111 11 11</a></li>
       </ul>
    </div>
    </header>
 
    <main>
 <!-- Шапка Профиля -->
-<section>
-   <div class="main-head">
-      <h1 class="head">Эффективные решения для вашего бизнеса</h1>
+<section class="solutions">
+   <div>
+      <h1 class="solutions-text">Эффективные решения для вашего бизнеса</h1>
 <!-- Кнопка-->
-<button type="button" class="order-button">Заказать услугу</button>
+<button type="button" class="button-background button-text">Заказать услугу</button>
 </div>
 </section>
 <!--Особенности-->
@@ -50,46 +50,55 @@
 <div>
    <h2 class="no-see">Особенности</h2>   
       <ul class="features">
-         <li class="feature-1">
-            <h3 class="feature-head">Внимание к деталям</h3>
-            <p class="feature-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+         <li>
+            <h3 class="feature">Внимание к деталям</h3>
+            <p class="about-feature">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
          </li>
-         <li class="feature-2">
-            <h3 class="feature-head">Пунктуальность</h3>
-            <p class="feature-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+         <li >
+            <h3 class="feature">Пунктуальность</h3>
+            <p class="about-feature">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
          </li>
-         <li class="feature-3">
-            <h3 class="feature-head">Планирование</h3>
-            <p class="feature-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+         <li>
+            <h3 class="feature">Планирование</h3>
+            <p class="about-feature">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
-         <li class="feature-4">
-            <h3 class="feature-head">Современные технологии</h3>
-            <p class="feature-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+         <li >
+            <h3 class="feature">Современные технологии</h3>
+            <p class="about-feature">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
          </li>
       </ul>
 </div>
 </section>
 <!-- Чем мы занимаемся-->
-
-
-<!-- РАЗОБРАТЬСЯ С !H2!-->
 <section>
-<div>
-   <h2 class="work">
+<div class="what-we-do">
+   <h2 class="head-doing">
       Чем мы занимаемся
    </h2>
-   <ul class="work-pics">
-      <li><img src="img/comp_work.jpg" alt="Computer Work" class="pic-1"></li>
-      <li><img src="img/phone_work.jpg" alt="Phone Work" class="pic-2"></li>
-      <li><img src="img/tablet_work.jpg" alt="Tablet Work" class="pic-3"></li>
+   <ul class="works">
+      <li><img src="img/comp_work.jpg" 
+               alt="Computer Work" 
+               width="370"
+               height="294">
+      </li>
+      <li><img src="img/phone_work.jpg" 
+               alt="Phone Work" 
+               width="370"
+               height="294">
+      </li>
+      <li><img src="img/tablet_work.jpg" 
+               alt="Tablet Work" 
+               width="370"
+               height="294">
+      </li>
    </ul>
 </div>
 </section>
 <!-- Наша команда -->
-<section id="ourteam">
-   <h2 class="team">Наша команда</h2> 
-   <ul class="team-box">
-      <li class="team-1">
+<section class="our-team">
+   <h2 class="team-head">Наша команда</h2> 
+   <ul>
+      <li class="card-shadow">
          <img src="img/img_team/product_designer.jpg"
                alt="Product Designer"
                width="270"
@@ -97,11 +106,11 @@
          <h3 class="team-member">
             Игорь Демьяненко
          </h3>
-            <p class="member-desc">
+            <p class="member-description">
                Product Designer
             </p>
       </li>
-      <li class="team-2">
+      <li class="card-shadow">
          <img src="img/img_team/front_end_developer.jpg"
                alt="Front End developer"
                width="270"
@@ -109,11 +118,11 @@
          <h3 class="team-member">
             Ольга Репина
          </h3>
-            <p class="member-desc">
+            <p class="member-description">
                Frontend Developer
             </p>
       </li>
-      <li class="team-3">
+      <li class="card-shadow">
          <img src="img/img_team/marketing.jpg" 
                alt="Marketing Worker"
                width="270" 
@@ -121,11 +130,11 @@
          <h3 class="team-member">
             Николай Тарасов
          </h3>
-            <p class="member-desc">
+            <p class="member-description">
                Marketing
             </p>
       </li>
-      <li class="team-4">
+      <li class="card-shadow">
          <img src="img/img_team/ui_designer.jpg" 
                alt="UI Designer" 
                width="270" 
@@ -133,7 +142,7 @@
          <h3 class="team-member">
             Михаил Ермаков
          </h3>
-            <p class="member-desc">
+            <p class="member-description">
                UI Designer
             </p>
       </li>
@@ -142,21 +151,22 @@
 </main>
 
 <!-- Подвал -->
-   <footer class="footer">
-      <a href="index.html" class="foot-brand">Web<span class="foot-white">Studio</span></a>
+   <footer>
+      <a href="index.html" class="footer-logo">Web<span class="logo-white">Studio</span></a>
       <address>
-         <ul class="location">
+         <ul >
             <li>
                <a href="https://goo.gl/maps/bWFkGNw7Ft1GiUdh8"
                target="_blank"
                rel="noopener noreferrer" 
-               class="adress">
+               class="location"
+               >
                г. Киев, пр-т Леси Украинки, 26
                </a>
 
             </li>
-            <li><a href="mailto:info@example.com" class="info-foot">info@example.com</a></li>
-            <li><a href="tel:+380991111111" class="info-foot">+38 099 111 11 11</a></li>
+            <li><a href="mailto:info@example.com" class="footer-info">info@example.com</a></li>
+            <li><a href="tel:+380991111111" class="footer-info">+38 099 111 11 11</a></li>
          </ul>
       </address>
    </footer>
