--- a/portfolio.html
+++ b/portfolio.html
@@ -16,21 +16,21 @@
 
 <body>
 <!-- Верхняя линия -->
-<header>
-    <div class="header">
-        <a href="index.html" class="header-brand"><span class="head-blue">Web</span>Studio</a>
+<header class="head">
+    <div class="container-x1">
+        <a href="index.html" class="logo">Web<span class="logo-black">Studio</span></a>
 
         <nav>
             <ul class="navigators">
                 <li><a href="index.html" class="navigator">Студия</a></li>
-                <li><a href="portfolio.html" class="navigator">Портофио</a></li>
-                <li><a href="/Contacts" class="navigator">Контакты</a></li>
+                <li><a href="portfolio.html" class="navigator">Портфолио</a></li>
+                <li><a href="" class="navigator">Контакты</a></li>
             </ul>
 
         </nav>
-        <ul class="infos">
-            <li><a href="email:info@devstudio.com" class="info">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="info">+38 096 111 11 11</a></li>
+        <ul class="head-infos">
+            <li><a href="email:info@devstudio.com" class="head-info">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="head-info">+38 096 111 11 11</a></li>
         </ul>
     </div>
 </header>
@@ -127,19 +127,18 @@
 </main>
     <!-- Подвал -->
 <footer>
-    <a href="index.html" class="header-brand"><span class="head-blue">Web</span>Studio</a>
+    <a href="index.html" class="footer-logo">Web<span class="logo-white">Studio</span></a>
     <address>
         <ul>
             <li>
-                <a href="https://goo.gl/maps/bWFkGNw7Ft1GiUdh8" 
-                target="_blank" 
-                rel="noopener noreferrer" class="adress">
+                <a href="https://goo.gl/maps/bWFkGNw7Ft1GiUdh8" target="_blank" rel="noopener noreferrer"
+                    class="location">
                     г. Киев, пр-т Леси Украинки, 26
                 </a>
 
             </li>
-            <li><a href="mailto:info@example.com" class="info">info@example.com</a></li>
-            <li><a href="tel:+380991111111" class="info">+38 099 111 11 11</a></li>
+            <li><a href="mailto:info@example.com" class="footer-info">info@example.com</a></li>
+            <li><a href="tel:+380991111111" class="footer-info">+38 099 111 11 11</a></li>
         </ul>
     </address>
 </footer>
