--- a/portfolio.html
+++ b/portfolio.html
@@ -37,89 +37,89 @@
 
 <main>
     <!-- Портфолио -->
-    <section>
-        <h1>Portfolio</h1>
-        <h2>Projects</h2>
-        <ul>
-            <li><button type="button">Все</button></li>
-            <li><button type="button">Веб-сайты</button></li>
-            <li><button type="button">Приложения</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button</li>
+    <section class="portfolio">
+        <h1 class="no-see">Portfolio</h1>
+        <h2 class="no-see">Projects</h2>
+        <ul class="project-buttons">
+            <li><button type="button" class="project-button-background project-button-text">Все</button></li>
+            <li><button type="button"class="project-button-background project-button-text">Веб-сайты</button></li>
+            <li><button type="button"class="project-button-background project-button-text">Приложения</button></li>
+            <li><button type="button"class="project-button-background project-button-text">Дизайн</button></li>
+            <li><button type="button"class="project-button-background project-button-text">Маркетинг</button</li>
     </section>
     <section>
         <ul>
-            <li><img 
+            <li class="projects-box"><img 
                 src="img/img_projects/technokryak.jpg" 
                 alt="Techno Kryak"
                 width="370"
                 height="294">
-                <h3>Технокряк</h3>
-                <p>Веб-сайт</p>
+                <h3 class="project-name">Технокряк</h3>
+                <p class="project-description">Веб-сайт</p>
             </li>
-            <li>
+            <li class="projects-box">
                 <img src="img/img_projects/poster.jpg" 
                 alt="poster"
                 width="370"
                 height="294">
-                <h3>Постер New Orlean vs Golden Star</h3>
-                <p>Дизайн</p>
+                <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
+                <p class="project-description">Дизайн</p>
             </li>
-            <li>
+            <li class="projects-box">
                 <img src="img/img_projects/restaurant.jpg" 
                 alt="The Seafood Restaurant"
                 width="370"
                 height="294">
-                <h3>Ресторан Seafood</h3>
-                <p>Приложение</p>
+                <h3 class="project-name">Ресторан Seafood</h3>
+                <p class="project-description">Приложение</p>
             </li>
-            <li>
+            <li class="projects-box">
                 <img src="img/img_projects/project_prime.jpg" 
                 alt="project prime"
                 width="370"
                 height="294">
-                <h3>Проект Prime</h3>
-                <p>Маркетинг</p>
+                <h3 class="project-name">Проект Prime</h3>
+                <p class="project-description">Маркетинг</p>
             </li>
-            <li>
+            <li class="projects-box">
                 <img src="img/img_projects/project_boxes.jpg" 
                 alt="Проект Boxes"
                 width="370"
                 height="294">
-                <h3>Проект Boxes</h3>
-                <p>Приложение</p>
+                <h3 class="project-name">Проект Boxes</h3>
+                <p class="project-description">Приложение</p>
             </li>
-            <li>
+            <li class="projects-box">
                 <img src="img/img_projects/inspiration.jpg" 
                 alt="Inspiration has no Borders"
                 width="370"
                 height="294">
-                <h3>Inspiration has no Borders</h3>
-                <p>Веб-сайт</p>
+                <h3 class="project-name">Inspiration has no Borders</h3>
+                <p class="project-description">Веб-сайт</p>
             </li>
-            <li>
+            <li class="projects-box">
                 <img src="img/img_projects/limited_edition.jpg" 
                 alt="Издание Limited Edition"
                 width="370"
                 height="294">.
-                <h3>Издание Limited Edition</h3>
-                <p>Дизайн</p>
+                <h3 class="project-name">Издание Limited Edition</h3>
+                <p class="project-description">Дизайн</p>
             </li>
-            <li>
+            <li class="projects-box">
                 <img src="img/img_projects/project_lab.jpg" 
                 alt="Проект LAB"
                 width="370"
                 height="294">
-                <h3>Проект LAB</h3>
-                <p>Маркетинг</p>
+                <h3 class="project-name">Проект LAB</h3>
+                <p class="project-description">Маркетинг</p>
             </li>
-            <li>
+            <li class="projects-box">
                 <img src="img/img_projects/growing_business.jpg" 
                 alt="Growing Business"
                 width="370"
                 height="294">
-                <h3>Growing Business</h3>
-                <p>Приложение</p>
+                <h3 class="project-name">Growing Business</h3>
+                <p class="project-description">Приложение</p>
             </li>
         </ul>
         
