fixed little errors

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,10 +42,11 @@
         <h2 class="no-see">Projects</h2>
         <ul class="project-buttons">
             <li><button type="button" class="project-button-background project-button-text">Все</button></li>
-            <li><button type="button"class="project-button-background project-button-text">Веб-сайты</button></li>
-            <li><button type="button"class="project-button-background project-button-text">Приложения</button></li>
-            <li><button type="button"class="project-button-background project-button-text">Дизайн</button></li>
-            <li><button type="button"class="project-button-background project-button-text">Маркетинг</button</li>
+            <li><button type="button" class="project-button-background project-button-text">Веб-сайты</button></li>
+            <li><button type="button" class="project-button-background project-button-text">Приложения</button></li>
+            <li><button type="button" class="project-button-background project-button-text">Дизайн</button></li>
+            <li><button type="button" class="project-button-background project-button-text">Маркетинг</button></li>
+        </ul>
     </section>
     <section>
         <ul>
