--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="styles/styles.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet">
+   <link rel="stylesheet" href="css/styles.css">
    <title>Document</title>
    
 </head>
@@ -23,7 +23,7 @@
 
       <nav>
          <ul class="navigators">
-            <li><a href="index.html" class="navigator">Студия</a></li>
+            <li><a href="index.html" class="navigator current-page">Студия</a></li>
             <li><a href="portfolio.html" class="navigator">Портфолио</a></li>
             <li><a href="" class="navigator">Контакты</a></li>
          </ul>
@@ -97,7 +97,7 @@
 <!-- Наша команда -->
 <section class="our-team">
    <h2 class="team-head">Наша команда</h2> 
-   <ul>
+   <ul class="team-members">
       <li class="card-shadow">
          <img src="img/img_team/product_designer.jpg"
                alt="Product Designer"
@@ -154,7 +154,7 @@
    <footer>
       <a href="index.html" class="footer-logo">Web<span class="logo-white">Studio</span></a>
       <address>
-         <ul >
+         <ul class="footer-ul">
             <li>
                <a href="https://goo.gl/maps/bWFkGNw7Ft1GiUdh8"
                target="_blank"
