--- a/portfolio.html
+++ b/portfolio.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 
@@ -23,7 +23,7 @@
         <nav>
             <ul class="navigators">
                 <li><a href="index.html" class="navigator">Студия</a></li>
-                <li><a href="portfolio.html" class="navigator">Портфолио</a></li>
+                <li><a href="portfolio.html" class="navigator current-page">Портфолио</a></li>
                 <li><a href="" class="navigator">Контакты</a></li>
             </ul>
 
@@ -39,7 +39,6 @@
     <!-- Портфолио -->
     <section class="portfolio">
         <h1 class="no-see">Portfolio</h1>
-        <h2 class="no-see">Projects</h2>
         <ul class="project-buttons">
             <li><button type="button" class="project-button-background project-button-text">Все</button></li>
             <li><button type="button" class="project-button-background project-button-text">Веб-сайты</button></li>
@@ -47,15 +46,13 @@
             <li><button type="button" class="project-button-background project-button-text">Дизайн</button></li>
             <li><button type="button" class="project-button-background project-button-text">Маркетинг</button></li>
         </ul>
-    </section>
-    <section>
-        <ul>
+        <ul class="projects">
             <li class="projects-box"><img 
                 src="img/img_projects/technokryak.jpg" 
                 alt="Techno Kryak"
                 width="370"
                 height="294">
-                <h3 class="project-name">Технокряк</h3>
+                <h2 class="project-name">Технокряк</h2>
                 <p class="project-description">Веб-сайт</p>
             </li>
             <li class="projects-box">
@@ -63,7 +60,7 @@
                 alt="poster"
                 width="370"
                 height="294">
-                <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
+                <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
                 <p class="project-description">Дизайн</p>
             </li>
             <li class="projects-box">
@@ -71,7 +68,7 @@
                 alt="The Seafood Restaurant"
                 width="370"
                 height="294">
-                <h3 class="project-name">Ресторан Seafood</h3>
+                <h2 class="project-name">Ресторан Seafood</h2>
                 <p class="project-description">Приложение</p>
             </li>
             <li class="projects-box">
@@ -79,7 +76,7 @@
                 alt="project prime"
                 width="370"
                 height="294">
-                <h3 class="project-name">Проект Prime</h3>
+                <h2 class="project-name">Проект Prime</h2>
                 <p class="project-description">Маркетинг</p>
             </li>
             <li class="projects-box">
@@ -87,7 +84,7 @@
                 alt="Проект Boxes"
                 width="370"
                 height="294">
-                <h3 class="project-name">Проект Boxes</h3>
+                <h2 class="project-name">Проект Boxes</h2>
                 <p class="project-description">Приложение</p>
             </li>
             <li class="projects-box">
@@ -95,7 +92,7 @@
                 alt="Inspiration has no Borders"
                 width="370"
                 height="294">
-                <h3 class="project-name">Inspiration has no Borders</h3>
+                <h2 class="project-name">Inspiration has no Borders</h2>
                 <p class="project-description">Веб-сайт</p>
             </li>
             <li class="projects-box">
@@ -103,7 +100,7 @@
                 alt="Издание Limited Edition"
                 width="370"
                 height="294">.
-                <h3 class="project-name">Издание Limited Edition</h3>
+                <h2 class="project-name">Издание Limited Edition</h2>
                 <p class="project-description">Дизайн</p>
             </li>
             <li class="projects-box">
@@ -111,7 +108,7 @@
                 alt="Проект LAB"
                 width="370"
                 height="294">
-                <h3 class="project-name">Проект LAB</h3>
+                <h2 class="project-name">Проект LAB</h2>
                 <p class="project-description">Маркетинг</p>
             </li>
             <li class="projects-box">
@@ -119,7 +116,7 @@
                 alt="Growing Business"
                 width="370"
                 height="294">
-                <h3 class="project-name">Growing Business</h3>
+                <h2 class="project-name">Growing Business</h2>
                 <p class="project-description">Приложение</p>
             </li>
         </ul>
@@ -130,7 +127,7 @@
 <footer>
     <a href="index.html" class="footer-logo">Web<span class="logo-white">Studio</span></a>
     <address>
-        <ul>
+        <ul class="footer-ul">
             <li>
                 <a href="https://goo.gl/maps/bWFkGNw7Ft1GiUdh8" target="_blank" rel="noopener noreferrer"
                     class="location">
